[package]
name = "satrunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
rand = "0.8.5"
serde = "1.0"
gloo-net = "0.3.0"
futures = "0.3.28"
wasm-bindgen-futures = "0.4.37"
serde_json = "1.0"
rand_chacha = "0.3.1"
gloo-timers = { version = "0.2.6", features = ["futures"] }
speedy = {version = "0.8.6", features = ["uuid"]}
uuid = {version = "1.4", default-features = false }



[profile.release]
lto = "thin"
opt-level = 'z'
