[package]
name = "satrunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
rand = "0.8.5"
gloo-net = "0.3.0"
futures = "0.3.28"
wasm-bindgen-futures = "0.4.37"
rand_chacha = "0.3.1"
speedy = {version = "0.8.6", features = ["uuid"]}
uuid = {version = "1.4", default-features = false }
bevy_egui = "0.21.0"
names = { version = "0.14.0", default-features = false }


[dev-dependencies]
gloo-timers = { version = "0.2.6", features = ["futures"] }

[profile.release]
lto = true
opt-level = 'z'
